# PPOIS_2

./: README.md
lab1/: .gitignore  README.md  main.py  pyproject.toml
lab1/exceptions/: custom_exceptions.py
lab1/solar_system_simulator/: asteroid.py  comet.py  main.py  planet.py  satellite.py
lab1/solar_system_simulator/solar_system/: solar_system_initializer.py
lab1/solar_system_simulator/validators/: planet_validator.py  satellite_validator.py  sun_validator.py  validator.py
lab1/src/: asteroid.py  celestial_body.py  comet.py  planet.py  satellite.py  solar_system.py  solar_system_initializer.py  spacecraft.py  sun.py
lab1/src/exceptions/: comet.py  custom_exceptions.py
lab1/src/solar_system/: solar_system.py  solar_system_initializer.py
lab1/src/validators/: asteroid_validator.py  comet_validator.py  planet_validator.py  satellite_validator.py  spacecraft_validator.py  sun_validator.py  validator.py
lab1/tests/: test_asteroid.py  test_comet.py  test_planet.py  test_satellite.py  test_solar_system.py  test_solar_system_initializer.py  test_spacecraft.py  test_sun.py
lab2/: .gitignore  README.md
lab2/src/: main.py
lab2/src/domain/: student.py
lab2/src/exceptions/: custom_exceptions.py
lab2/src/parser/: xml_students_sax.py
lab2/ui/: addWindow.ui  deleteWindow.ui  mainWindow.ui  searchWindow.ui
lab3/: .gitignore  README.md  main.py
lab3/data/: config.json  leaderboard.json
lab3/src/: app.py  config.py  entities.py  game.py  menu.py  scoreboard.py
lab4/: .gitignore  README.md  main.py  requirements.txt
lab4/src/: model.py
(+34 files in other folders)
