[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-system-simulator"
version = "0.1.0"
description = "A Python simulation of the Solar System with CLI interface"
readme = "README.md"
authors = [
    {name = "aratakrr1", email = "kirillpoplavskiy8@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/yourusername/solar-system-simulator"
Repository = "https://github.com/yourusername/solar-system-simulator"

[project.scripts]
solar-system = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]